# observerai-magnet-engine

./: .env.example  .env.runner.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements-runner-py313.txt  requirements.txt
app/: main.py
app/api/: admin.py  auth.py  billing.py  dashboard.py  ea.py  ingest.py  landing.py  liquidity.py  market_map.py  oracle.py  performance.py  signals.py  stocks.py  v2.py
app/core/: audit.py  config.py  logging.py  rate_limit.py  security.py  symbols.py
app/db/: init_db.py  session.py
app/models/: candle.py  market_state.py  signal.py  signal_outcome.py  user.py
app/schemas/: anchor.py  auth.py  billing.py  candle.py  liquidity.py  market_map.py  oracle.py  performance.py  signal.py  stocks.py  v2.py
app/services/: adr_engine.py  alert_engine.py  anchor_engine.py  auth_service.py  best_signal_service.py  (+21 more)
docs/: api_contracts.md  architecture.md  mt5_runner_setup.md  product_notes.md  signal_lifecycle.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
observerai/: main.py  pyproject.toml
scripts/: replay_m15.py  run_mt5_runner.py  seed_sample_data.py
tests/: test_adr_engine.py  test_anchor_engine.py  test_best_signal_api.py  test_billing_api.py  test_dashboard_api.py  test_event_engine.py  test_intent_engine.py  test_level_engine.py  test_liquidity_api.py  test_magnet_engine.py  test_market_context_engine.py  test_midlevel_engine.py  test_oracle_api.py  test_performance_api.py  test_security_api.py  test_telegram_delivery.py  test_v2_intelligence.py
(+7 files in other folders)
