[project]
name = "observerai-magnet-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "stripe>=11.0.0",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]
